syntax = "proto3";

package exa.product_analytics_pb;

import "buf/validate/validate.proto";

option go_package = "github.com/Exafunction/Exafunction/exa/product_analytics_pb";

service ProductAnalyticsService {
    rpc RecordAnalyticsEvent(RecordAnalyticsEventRequest) returns (RecordAnalyticsEventResponse);
}

message RecordAnalyticsEventRequest {
    string event_name = 1;
    string api_key = 2;
    string installation_id = 3;
    string ide_name = 4;
    string os = 5;
    string codeium_version = 6;
    string ide_version = 7;
    uint64 duration_ms = 8;
    map<string, string> extra = 9;
    map<string, bool> experiments = 10;
    string plan_tier = 11 [deprecated = true];
    string device_fingerprint = 12;
    string ide_type = 13;
}

message RecordAnalyticsEventResponse {
    
}
